--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "code-runner.executorMap": {
-    "typescript": "npx ts-node --files --transpile-only",
+    "typescript": "npx ts-node --files",
   },
   "prettier.configPath": "./.prettierrc.js"
 }
